# duckdb-wheel-mirror

./: .gitattributes  README.md  autowheel.yml  build.py  netlify.toml  pyproject.toml  resolve_links.py
download/: duckdb-0.4.0-cp310-cp310-linux_x86_64.whl.metadata.json  duckdb-0.4.0-cp311-cp311-linux_x86_64.whl.metadata.json  duckdb-0.4.0-cp36-cp36m-linux_x86_64.whl.metadata.json  duckdb-0.5.0-cp310-cp310-linux_x86_64.whl.metadata.json  duckdb-0.5.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  duckdb-0.5.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata.json  duckdb-0.5.0-cp311-cp311-linux_x86_64.whl.metadata.json  duckdb-0.5.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  duckdb-0.5.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata.json  duckdb-0.5.0-cp36-cp36m-linux_x86_64.whl.metadata.json  duckdb-0.5.0-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  duckdb-0.5.0-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata.json  duckdb-0.5.1-cp310-cp310-linux_x86_64.whl.metadata.json  duckdb-0.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  duckdb-0.5.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata.json  duckdb-0.5.1-cp311-cp311-linux_x86_64.whl.metadata.json  duckdb-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  duckdb-0.5.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata.json  duckdb-0.5.1-cp36-cp36m-linux_x86_64.whl.metadata.json  duckdb-0.5.1-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  (+10 more)
(+25 files in other folders)
